--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
-.body {
+body {
   background: pink;
 }
 
-.h1 {
+h1 {
   color: blue;
   fontsize: 3em;
 }
 
-.h2 {
+h2 {
   color: green;
   font-weight: normal;
   font-style: italic;
